--- a/photoviewer.css
+++ b/photoviewer.css
@@ -1,178 +1,289 @@
-body {
+
+body{
 
 	margin: 0;
 }
 
-ul[data-foto="hiddenMainFoto"] {
+ul[data-foto="hiddenMainFoto"]{
 
 	display: none;
 }
 
 ul{
 
-	list-style: none;
-	margin: 0;
-	padding: 0;
 	position: absolute;
-	bottom: 0.5em;
+	list-style: none;
 	width: 100%;
-	
+	bottom: 20%;
+	padding: 0;
+	margin: 0;
 }
-
 
 li {
 
-	width: 50px;
-	height: 50px;
 	display: inline-block;
 	text-align: center;
-	margin: 0;
 	display: none;
-
+	width: 14.5%;
+	height: 10%;
+	margin: 0;
 }
 
-img[data-foto="option-foto"] {
-	width: 190px;
-	height: 100px;
+img[data-foto="option-foto"]{
+	
 	display: block;
+	height: 100%;
+	width: 100%;
 }
 
-ul li[data-name="2"] {
+ul li[data-name="2"]{
 
-	visibility: visible;
-	width: 14%;
-	height: 100px;
+	box-shadow: 0.2em 0.2em 0.6em 0em lightgrey,
+			  -0.2em -0.2em 0.6em 0em lightgrey;
 	display: inline-block;
 	text-align: center;
 	position:relative;
+	cursor: pointer;
+	margin-right: 2.8%;
+	width: 14.5%;
+	height: 10%;
 	left: 7%;
-	margin-right: 1.5em;
-	box-shadow:  2px 2px 8px 2px lightgrey,
-				-2px -2px 8px 0px lightgrey;
-	
 }
 
-img[data-name="previewRight"] {
-
-	width: 20px;
-	height: 20px;
-	position: absolute;
-	right: 4em;
-	bottom: 3.5em;
-
-}
-
-img[data-name="previewRight"]:hover{
-
-	opacity: 0.3;
-}
-
-img[data-name="previewLeft"] {
+span[data-name="previewRight"]{
 
 	-webkit-transform: rotate( 180deg );
-	width: 20px;
-	height: 20px;
 	position: absolute;
-	left: 3em;
-	bottom: 3.5em;
-
+	cursor: pointer;
+	font-size: 450%;
+	color: #F4A460;
+	bottom: 14%;
+	right: 3%;
 }
 
-img[data-name="previewLeft"]:hover{
+span[data-name="previewRight"]:hover{
 
-	opacity: 0.3
+	opacity: 0.5;
 }
 
-div[data-name="viewerFoto"] {
+span[data-name="previewLeft"]{
+
 	position: absolute;
-	width: 100%;
-	height: 100%;
-	/*border: 1px solid;*/
+	cursor: pointer;
+	font-size: 450%;
+	color: #F4A460;
+	bottom: 25%;
+	left: 3%;
+}
+
+span[data-name="previewLeft"]:hover{
+
+	opacity: 0.5 
+}
+
+div[data-name="viewerFoto"]{
+
 	background-color: #E0FFFF;
 	-webkit-user-select: none;
-
+	visibility: hidden;
+	position: absolute;
+	height: 100%;
+	width: 100%;
 }
 
 
 div[data-name="predPokaz"]{
 
-	position: absolute;
-	bottom: 0%;
-	height: 8em;
-	width:100%;
 	background-color: #E0FFFF;
-	cursor: pointer;
-
-}
-
-img[data-foto="main-foto"] {
-
-	z-index: 100;
-	width: 70%;
-	height: 76%;
 	position: absolute;
-	top: 1em;
-	left: 11.5em;
-	bottom: 11em;
-	box-shadow:  2px 2px 8px 2px lightgrey,
-				-2px -2px 8px 0px lightgrey;
+	height: 12%;
+	bottom: 0%;
+	width:100%;
 }
 
-img[data-mainLeft-name="left"] {
+img[data-foto="main-foto"]{
 
-	width: 60px;
-	height: 60px;
+	box-shadow:  0.2em 0.2em 0.8em 0em lightgrey,
+				-0.2em -0.2em 0.8em 0em lightgrey;
+	position: absolute;
+	z-index: 100;
+	height: 78%;
+	left: 13.5%;
+	bottom: 12%;
+	width: 72%;
+	top: 3%;
+}
+
+span[data-mainLeft-name="left"]{
+
+	position: absolute;
+	font-size: 1200%;
+	cursor: pointer;
+	color: #F4A460;
+	top: 23%;
+	left: 4%;
+}
+
+
+span[data-mainRight-name="right"]{
+
 	-webkit-transform: rotate( 180deg );
 	position: absolute;
-	top: 35%;
-	left: 2%;
+	font-size: 1200%;
 	cursor: pointer;
-
+	color: #F4A460;
+	right: 5.5%;
+	top: 28%;
 }
 
+span[data-mainLeft-name="left"]:hover{
 
-img[data-mainRight-name="right"]{
-
-	width: 60px;
-	height: 60px;
-	position: absolute;
-	top: 35%;
-	right: 2%;
-	cursor: pointer;
-
+	opacity: 0.5;
 }
 
-img[data-mainLeft-name="left"]:hover{
+span[data-mainRight-name="right"]:hover{
 
-	opacity: 0.3;
-	
+	opacity: 0.5;
 }
-
-img[data-mainRight-name="right"]:hover{
-
-	opacity: 0.3;
-	
-}
-
-
 
 .backlightFoto{
 
-	box-shadow: 1px 1px 1px 1px orange,
-			   -1px -1px 3px 3px orange;
+	box-shadow: 0.1em 0.1em 0.1em 0.1em orange,
+			   -0.1em -0.1em 0.1em 0.1em orange;
 }
 
+.loading{
 
+	background-color: #1E90FF;
+}
 
+.loading:before{
+	
+	content: "loading...";
+	position:absolute;
+	font-size: 3em;
+	color: white;
+	left: 39%;
+	top: 45%;
+}
 
+div[data-name="select-photos"]{
 
+	box-shadow:  0.2em 0.2em 0.4em 0em lightgrey inset,
+				-0.2em -0.2em 0.4em 0em lightgrey inset;
+	background-color:rgb(240, 240, 240);
+	-webkit-user-select: none; 
+	position: absolute;
+	height: 45%;
+	width: 28%;
+	left: 10%;
+	top: 5%;
+}
 
+span[data-title="title"]{
 
+ 	box-shadow:  0.1em 0.1em 0.5em 0em lightgrey,
+				-0.1em -0.1em 0.5em 0em lightgrey;
+	background-color: rgb(247, 247, 247);
+	border-radius: 0.3em;
+	position: absolute;
+	text-align: center;
+	font-size: 1.5em;
+	color: #20B2AA;
+	width: 50%;
+	right: 7%;
+	top: 7%;
+}
 
+span[data-aircraft="aircraft"]{
+	
+	box-shadow:  0.2em 0.2em 0.4em 0em lightgrey,
+				-0.2em -0.2em 0.4em 0em lightgrey;
+	background-color: lightgreen;
+	border-radius: 0.5em;
+	position: absolute;
+	padding-left: 5%; 
+	cursor: pointer;
+	transition:0.4s;
+	font-size: 2em;
+	height: 1.4em;
+	opacity: 0.7;
+	color: white;
+	bottom: 10%;
+	width: 86%;
+	left: 4%;
+}
 
+span[data-aircraft="aircraft"]:hover{
+		
+	opacity: 1;	
+}
 
+span[data-aircraft="aircraft"]:focus{
 
+	outline: none;
+	opacity: 1;
+}
 
+span[data-photo="photo"]{
+	
+	box-shadow:  0.2em 0.2em 0.4em 0em lightgrey,
+				-0.2em -0.2em 0.4em 0em lightgrey;
+	background-color: lightgreen;
+	border-radius: 0.5em;
+	position: absolute;
+	padding-left: 5%; 
+	cursor: pointer;
+	transition:0.4s;
+	font-size: 2em;
+	height: 1.4em;
+	color: white;
+	opacity: 0.7;
+	bottom: 28%;
+	width: 86%;
+	left: 4%;
+}
+
+span[data-photo="photo"]:hover{
+		
+	opacity: 1;	
+}
+
+span[data-photo="photo"]:focus{
+
+	outline: none;
+	opacity: 1;
+}
+
+span[data-zippo="zippo"]{
+	
+	box-shadow:  0.2em 0.2em 0.4em 0em lightgrey,
+				-0.2em -0.2em 0.4em 0em lightgrey;
+	background-color: lightgreen;
+	border-radius: 0.5em;
+	position: absolute;
+	padding-left: 5%; 
+	cursor: pointer;
+	transition:0.4s;
+	font-size: 2em;
+	height: 1.4em;
+	opacity: 0.7;
+	color: white;
+	bottom: 46%;
+	width: 86%;
+	left: 4%;
+}
+
+span[data-zippo="zippo"]:hover{
+		
+	opacity: 1;	
+}
+
+span[data-zippo="zippo"]:focus{
+
+	outline: none;
+	opacity: 1;
+}
 
 
 
