--- a/photoviewer.css
+++ b/photoviewer.css
@@ -1,290 +1,318 @@
-
 body{
 
-	margin: 0;
+    margin: 0;
 }
 
 ul[data-foto="hiddenMainFoto"]{
 
-	display: none;
+    display: none;
 }
 
 ul{
 
-	position: absolute;
-	list-style: none;
-	width: 100%;
-	bottom: 20%;
-	padding: 0;
-	margin: 0;
+    position: absolute;
+    list-style: none;
+    width: 100%;
+    bottom: 5%;
+    padding: 0;
+    margin: 0;
 }
 
 li {
 
-	display: inline-block;
-	text-align: center;
-	display: none;
-	width: 14.5%;
-	height: 10%;
-	margin: 0;
+    display: inline-block;
+    text-align: center;
+    display: none;
+    width: 14.5%;
+    height: 10%;
+    margin: 0;
 }
 
 img[data-foto="option-foto"]{
-	
-	display: block;
-	height: 100%;
-	width: 100%;
+    
+    object-fit: cover;
+    display: block;
+    height: 100%;
+    width: 100%;
 }
 
 ul li[data-name="2"]{
 
-	box-shadow: 0.2em 0.2em 0.6em 0em lightgrey,
-			  -0.2em -0.2em 0.6em 0em lightgrey;
-	display: inline-block;
-	text-align: center;
-	position:relative;
-	cursor: pointer;
-	margin-right: 2.8%;
-	width: 14.5%;
-	height: 10%;
-	left: 7%;
+    box-shadow: 0.2em 0.2em 0.6em 0em lightgrey,
+              -0.2em -0.2em 0.6em 0em lightgrey;
+    display: inline-block;
+    text-align: center;
+    margin-right: 2.8%;
+    position:relative;
+    cursor: pointer;
+    width: 14.5%;
+    height: 6.5em;
+    left: 7%;
 }
+
 
 span[data-name="previewRight"]{
 
-	-webkit-transform: rotate( 180deg );
-	position: absolute;
-	cursor: pointer;
-	font-size: 450%;
-	color: #F4A460;
-	bottom: 14%;
-	right: 3%;
+    -webkit-transform: rotate( 180deg );
+    -moz-transform: rotate( 180deg );
+    -ms-transform: rotate( 180deg );
+    position: absolute;
+    cursor: pointer;
+    font-size: 450%;
+    color: #F4A460;
+    bottom: 14%;
+    right: 3%;
 }
 
 span[data-name="previewRight"]:hover{
 
-	opacity: 0.5;
+    opacity: 0.5;
 }
 
 span[data-name="previewLeft"]{
 
-	position: absolute;
-	cursor: pointer;
-	font-size: 450%;
-	color: #F4A460;
-	bottom: 25%;
-	left: 3%;
+    position: absolute;
+    cursor: pointer;
+    font-size: 450%;
+    color: #F4A460;
+    bottom: 25%;
+    left: 3%;
 }
 
 span[data-name="previewLeft"]:hover{
 
-	opacity: 0.5 
+    opacity: 0.5 
 }
 
 div[data-name="viewerFoto"]{
 
-	background-color: #E0FFFF;
-	-webkit-user-select: none;
-	visibility: hidden;
-	position: absolute;
-	height: 100%;
-	width: 100%;
+    background-color: #E0FFFF;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    visibility: hidden;
+    position: absolute;
+    height: 100%;
+    width: 100%;
 }
 
 
 div[data-name="predPokaz"]{
 
-	background-color: #E0FFFF;
-	position: absolute;
-	height: 12%;
-	bottom: 0%;
-	width:100%;
+    background-color: #E0FFFF;
+    position: absolute;
+    height: 12%;
+    bottom: 0%;
+    width:100%;
 }
 
 img[data-foto="main-foto"]{
 
-	box-shadow:  0.2em 0.2em 0.8em 0em lightgrey,
-				-0.2em -0.2em 0.8em 0em lightgrey;
-	position: absolute;
-	z-index: 100;
-	height: 78%;
-	left: 13.5%;
-	bottom: 12%;
-	width: 72%;
-	top: 3%;
+    box-shadow:  0.2em 0.2em 0.8em 0em lightgrey,
+                -0.2em -0.2em 0.8em 0em lightgrey;
+    background-color: #E0FFFF;
+    object-fit: contain;
+    position: absolute;
+    z-index: 100;
+    height: 78%;
+    left: 12.5%;
+    bottom: 12%;
+    width: 72%;
+    top: 3%;
 }
 
 span[data-mainLeft-name="left"]{
 
-	position: absolute;
-	font-size: 1200%;
-	cursor: pointer;
-	color: #F4A460;
-	top: 23%;
-	left: 4%;
+    position: absolute;
+    font-size: 1200%;
+    cursor: pointer;
+    color: #F4A460;
+    top: 23%;
+    left: 4%;
 }
 
 
 span[data-mainRight-name="right"]{
 
-	-webkit-transform: rotate( 180deg );
-	position: absolute;
-	font-size: 1200%;
-	cursor: pointer;
-	color: #F4A460;
-	right: 5.5%;
-	top: 28%;
+    -webkit-transform: rotate( 180deg );
+    -moz-transform: rotate( 180deg );
+    -ms-transform: rotate( 180deg );
+    position: absolute;
+    font-size: 1200%;
+    cursor: pointer;
+    color: #F4A460;
+    right: 5.5%;
+    top: 28%;
 }
 
 span[data-mainLeft-name="left"]:hover{
 
-	opacity: 0.5;
+    opacity: 0.5;
 }
 
 span[data-mainRight-name="right"]:hover{
 
-	opacity: 0.5;
+    opacity: 0.5;
 }
 
 .backlightFoto{
 
-	box-shadow: 0.1em 0.1em 0.1em 0.1em orange,
-			   -0.1em -0.1em 0.1em 0.1em orange;
+    box-shadow: 0.1em 0.1em 0.4em 0.1em orange,
+               -0.1em -0.1em 0.4em 0.1em orange;
 }
 
-.loading{
+.loadingMainphoto{
 
-	background-color: #1E90FF;
+    background-color: #E0FFFF;
 }
 
-.loading:before{
-	
-	content: "loading...";
-	position:absolute;
-	font-size: 3em;
-	color: white;
-	left: 39%;
-	top: 45%;
+.loadingMainphoto:before{
+    
+    content: "loading...";
+    position:absolute;
+    font-size: 3em;
+    color: lightgreen;
+    left: 42%;
+    top: 45%;
+}
+
+.loadingPreview{
+
+    background-color: #E0FFFF;
+}
+
+.loadingPreview:before{
+
+    content: "...";
+    position: absolute;
+    font-size: 5.2em;
+    color: lightgreen;
+    left: 34%;
+    bottom: 27%;
 }
 
 div[data-name="select-photos"]{
 
-	box-shadow:  0.2em 0.2em 0.4em 0em lightgrey inset,
-				-0.2em -0.2em 0.4em 0em lightgrey inset;
-	background-color:rgb(240, 240, 240);
-	-webkit-user-select: none; 
-	position: absolute;
-	height: 45%;
-	width: 28%;
-	left: 10%;
-	top: 5%;
+    box-shadow:  0.2em 0.2em 0.4em 0em lightgrey inset,
+                -0.2em -0.2em 0.4em 0em lightgrey inset;
+    background-color:rgb(240, 240, 240);
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none; 
+    position: absolute;
+    height: 45%;
+    width: 28%;
+    left: 10%;
+    top: 5%;
 }
 
 span[data-title="title"]{
 
- 	box-shadow:  0.1em 0.1em 0.5em 0em lightgrey,
-				-0.1em -0.1em 0.5em 0em lightgrey;
-	background-color: rgb(247, 247, 247);
-	border-radius: 0.3em;
-	position: absolute;
-	text-align: center;
-	font-size: 1.5em;
-	color: #20B2AA;
-	width: 50%;
-	right: 7%;
-	top: 7%;
+    box-shadow:  0.1em 0.1em 0.5em 0em lightgrey,
+                -0.1em -0.1em 0.5em 0em lightgrey;
+    background-color: rgb(247, 247, 247);
+    border-radius: 0.3em;
+    position: absolute;
+    text-align: center;
+    font-size: 1.5em;
+    color: #20B2AA;
+    width: 50%;
+    right: 7%;
+    top: 7%;
 }
 
 span[data-aircraft="aircraft"]{
-	
-	box-shadow:  0.2em 0.2em 0.4em 0em lightgrey,
-				-0.2em -0.2em 0.4em 0em lightgrey;
-	background-color: lightgreen;
-	border-radius: 0.5em;
-	position: absolute;
-	padding-left: 5%; 
-	cursor: pointer;
-	transition:0.4s;
-	font-size: 2em;
-	height: 1.4em;
-	opacity: 0.7;
-	color: white;
-	bottom: 10%;
-	width: 86%;
-	left: 4%;
+    
+    box-shadow:  0.2em 0.2em 0.4em 0em lightgrey,
+                -0.2em -0.2em 0.4em 0em lightgrey;
+    background-color: lightgreen;
+    -webkit-transition:0.4s;
+    -moz-transition:0.4s;
+    border-radius: 0.5em;
+    position: absolute;
+    padding-left: 5%; 
+    cursor: pointer;
+    font-size: 2em;
+    height: 1.4em;
+    opacity: 0.7;
+    color: white;
+    bottom: 10%;
+    width: 86%;
+    left: 4%;
 }
 
 span[data-aircraft="aircraft"]:hover{
-		
-	opacity: 1;	
+        
+    opacity: 1; 
 }
 
 span[data-aircraft="aircraft"]:focus{
 
-	outline: none;
-	opacity: 1;
+    outline: none;
+    opacity: 1;
 }
 
 span[data-photo="photo"]{
-	
-	box-shadow:  0.2em 0.2em 0.4em 0em lightgrey,
-				-0.2em -0.2em 0.4em 0em lightgrey;
-	background-color: lightgreen;
-	border-radius: 0.5em;
-	position: absolute;
-	padding-left: 5%; 
-	cursor: pointer;
-	transition:0.4s;
-	font-size: 2em;
-	height: 1.4em;
-	color: white;
-	opacity: 0.7;
-	bottom: 28%;
-	width: 86%;
-	left: 4%;
+    
+    box-shadow:  0.2em 0.2em 0.4em 0em lightgrey,
+                -0.2em -0.2em 0.4em 0em lightgrey;
+    background-color: lightgreen;
+    -webkit-transition:0.4s;
+    -moz-transition:0.4s;
+    border-radius: 0.5em;
+    position: absolute;
+    padding-left: 5%; 
+    cursor: pointer;
+    font-size: 2em;
+    height: 1.4em;
+    color: white;
+    opacity: 0.7;
+    bottom: 28%;
+    width: 86%;
+    left: 4%;
 }
 
 span[data-photo="photo"]:hover{
-		
-	opacity: 1;	
+        
+    opacity: 1; 
 }
 
 span[data-photo="photo"]:focus{
 
-	outline: none;
-	opacity: 1;
+    outline: none;
+    opacity: 1;
 }
 
 span[data-zippo="zippo"]{
-	
-	box-shadow:  0.2em 0.2em 0.4em 0em lightgrey,
-				-0.2em -0.2em 0.4em 0em lightgrey;
-	background-color: lightgreen;
-	border-radius: 0.5em;
-	position: absolute;
-	padding-left: 5%; 
-	cursor: pointer;
-	transition:0.4s;
-	font-size: 2em;
-	height: 1.4em;
-	opacity: 0.7;
-	color: white;
-	bottom: 46%;
-	width: 86%;
-	left: 4%;
+    
+    box-shadow:  0.2em 0.2em 0.4em 0em lightgrey,
+                -0.2em -0.2em 0.4em 0em lightgrey;
+    background-color: lightgreen;
+    -webkit-transition:0.4s;
+    -moz-transition:0.4s;
+    border-radius: 0.5em;
+    position: absolute;
+    padding-left: 5%; 
+    cursor: pointer;
+    font-size: 2em;
+    height: 1.4em;
+    opacity: 0.7;
+    color: white;
+    bottom: 46%;
+    width: 86%;
+    left: 4%;
 }
 
 span[data-zippo="zippo"]:hover{
-		
-	opacity: 1;	
+        
+    opacity: 1; 
 }
 
 span[data-zippo="zippo"]:focus{
 
-	outline: none;
-	opacity: 1;
+    outline: none;
+    opacity: 1;
 }
-
 
 
 
